[tool.poetry]
name = "ps2isopatcher"
version = "0.1.0"
description = "Modify PS2 ISO files"
authors = ["Jasper Chan <jasperchan515@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
ps2isopatcher = 'ps2isopatcher.cli:main'

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
